          static method UBYTE_MAX : byte ()
          static method USHORT_MAX : short ()
          static method UINT_MAX : int ()
          static method ULONG_MAX : long ()
          static method FLOAT_MAX : float ()
          static method FLOAT_MIN : float()
          static method DOUBLE_MAX : double ()
          static method DOUBLE_MIN : double ()

0.9604  2022-06-08
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove Unicode module. Unicode module becomes CPAN module.
        * Remove Regex module. Regex module becomes CPAN module.
0.9603  2022-06-07
        [CHANGE]
        * Add --no-pm-file option to spvmdist command
        * Add Fn->is_hex_digit.
        * Add Fn->contains.
        * Add Fn->get_next_code_point.
        * Add Fn->look_next_code_point.
        * Generate Foo.native/src/.gitkeep and Foo.native/include/.gitkeep in "--native" option of "spvmdist".
        * Fn class doesn't depend on Regex and Unicode class.
        * Add MANIFEST to .gitignore file that is generated by "spvmdist".
        * Add basic test SPVM module file to the files that are generated by "spvmdist".
        [BUG FIX]
        * Fix the name argument of Makefile.PL that is generated by "spvmdist" command.
        * Fix the bug that t/basic.t that is generated by "spvmdist" command fails.
        * Fix the bug that MANIFEST.SKIP that "spvmdist" command generates is wrong.
        * Fix the bug that Makefile.PL that "spvmdist" command generates is wrong.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Rename SPVM::Builder::Generator::Dist to SPVM::Dist.
        * Remove Fn->replace.
        * Remove Fn->match.
        * "SPVM-" prefix is added to the default output directory of "spvmdist" command.
0.9602  2022-06-07
        [CHANGE]
        * Improve compilation error messages.
        * add "spvmdist" command.
          
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove "spvmgenlib" command. The important fetures are merged into "spvmdist"